--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -8946,12 +8946,7 @@ select:disabled {
   display: none;
 }
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
+
 
 button:not(:disabled),
 [type="button"]:not(:disabled),
@@ -9009,10 +9004,6 @@ legend + * {
   height: auto;
 }
 
-[type="search"] {
-  outline-offset: -2px;
-  -webkit-appearance: textfield;
-}
 
 /* rtl:raw:
 [type="tel"],
@@ -10844,7 +10835,6 @@ textarea.form-control-lg {
   background-size: contain;
   border: 1px solid rgba(0, 0, 0, 0.25);
   appearance: none;
-  color-adjust: exact;
 }
 
 .form-check-input[type="checkbox"] {
@@ -14267,6 +14257,14 @@ fieldset:disabled .btn {
   margin: -0.5rem -0.5rem -0.5rem auto;
 }
 
+.modal-header button {
+  cursor: pointer;
+  background: #ffffff00;
+  color: #2a2e35;
+  border: none;
+  font-size: 20pt;
+}
+
 .modal-title {
   margin-bottom: 0;
   line-height: 1.5;
@@ -15467,7 +15465,7 @@ fieldset:disabled .btn {
   display: inline-flex !important;
 }
 
-.d-none, .navbar.navbar-mini .navbar-menu-wrapper.navbar-search-wrapper {
+.navbar.navbar-mini .navbar-menu-wrapper.navbar-search-wrapper {
   display: none !important;
 }
 
@@ -21530,7 +21528,7 @@ dl li {
 }
 
 .auth .auth-form-light {
-  background: #ffffff;
+  background: #232323;
 }
 
 .auth .auth-form-light select {
@@ -21591,11 +21589,13 @@ dl li {
   background: transparent;
   border-radius: 0;
   font-size: .9375rem;
+  color: #fff;
 }
 
 .auth form .auth-form-btn {
   height: 50px;
   line-height: 1.5;
+  font-weight: 700;
 }
 
 .auth form .auth-link {
@@ -21974,6 +21974,7 @@ dl li {
   background: rgba(255, 255, 255, 0.13);
   border-radius: 4px;
   padding: 0.75rem;
+  width: 430%;
 }
 
 .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group .form-control,
@@ -22096,6 +22097,7 @@ dl li {
   .navbar .navbar-menu-wrapper .navbar-nav.navbar-nav-right {
     margin-left: auto;
   }
+  
 }
 
 .navbar .navbar-menu-wrapper.navbar-search-wrapper {
@@ -22130,6 +22132,20 @@ dl li {
 
 @media (max-width: 767px) {
   .navbar .navbar-menu-wrapper.navbar-search-wrapper .navbar-nav.navbar-nav-right .nav-item.nav-profile .nav-link .nav-profile-name {
+    display: none;
+  }
+  .navbar .navbar-menu-wrapper.navbar-search-wrapper{
+    margin: 10px 
+  }
+  
+  #profileDropdown{
+    display: none;
+  }
+  .navbar .navbar-menu-wrapper .navbar-nav .nav-item.nav-search .input-group{
+    width: 180%;
+    padding: 1.3rem;
+  }
+  .nav-item .nav-profile .dropdown{
     display: none;
   }
 }
@@ -22186,7 +22202,7 @@ dl li {
 
 @media (max-width: 480px) {
   .navbar .navbar-brand-wrapper {
-    width: 55px;
+    width: 30%;
   }
   .navbar .navbar-brand-wrapper .brand-logo-mini {
     padding-top: 0px;
@@ -22298,3 +22314,143 @@ dl li {
 }
 
 /*# sourceMappingURL=maps/style.css.map */
+
+
+.main-login{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.left{
+  width: 50vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.left > h1,h2{
+  color: #ffffff;
+  letter-spacing: 1px;
+}
+
+.left-image{
+  width: 30vw;
+}
+
+.right{
+  width: 50vw;
+  height: 100vh;
+  background: #ffb03b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-login{
+  width: 50%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px 35px;
+  background: aliceblue;
+  border-radius: 20px;
+  box-shadow: 0px 10px 40px #00000056;
+}
+
+.card-login > h1{
+  color: #ffb03b;
+  font-weight: 800;
+  margin: 0;
+}
+
+form{
+  width: 100%;
+}
+
+.textfield{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 10px 0px;
+}
+
+.textfield > input{
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  background: #ffffff;
+  font-size: 12pt;
+  box-shadow: 0px 10px 40px #ffb03b56;
+  outline-color: #ffb03b;
+  box-sizing: border-box;
+  border: 2px solid #ffb03b;
+}
+
+.textfield > label{
+  margin-bottom: 10px;
+  color:#000;
+  font-weight: 500;
+}
+
+.btn-login{
+  width: 100%;
+  padding: 16px 0px;
+  margin: 10px 0px;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 3px;
+  background: #ffb03b;
+  cursor: pointer;
+  box-shadow: 0px 10px 40px -12px #00000052;
+}
+
+/*------ Start Responsivo ------*/
+@media only screen and (max-width:950px){
+  .card-login{
+      width: 85%;
+  }
+}
+
+@media only screen and (max-width:600px){
+  .main-login{
+      flex-direction: column;
+  }
+
+  .left > h1,.left-image{
+      display: none;
+  }
+
+  .left{
+      width: 100%;
+      height: 0%;
+  }
+
+  .right{
+      width: 100%;
+      height: 100%;
+      background: none;
+      margin-bottom: 5vw;
+  }
+
+  .left-image{
+      width: 75vw;
+  }
+  
+  .card-login{
+      width: 90%;
+  }
+}
+/*------ End Responsivo ------*/
